# jvm-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  package.json
examples/BST/: BST.java
examples/collections/: CollectionsDemo.java
examples/demo/: Main.java
src/: bytecode.rs  classfile.rs  launcher.rs  lib.rs  main.rs
src/vm/: builtin.rs  classloader.rs  frame.rs  heap.rs  interpreter.rs  mod.rs  thread.rs  types.rs  verify.rs
src/vm/builtin/: bootstrap.rs  bootstrap_reflect.rs  bootstrap_regex.rs  bootstrap_text.rs  bootstrap_time.rs  format.rs  helpers.rs  invoke.rs  invoke_concurrent.rs  invoke_nio.rs  invoke_other.rs  invoke_reflect.rs  invoke_regex.rs  invoke_text.rs  invoke_time.rs  invoke_util.rs  mod.rs
src/vm/jit/: compiler.rs  emitter.rs  mod.rs  optimizer.rs  runtime.rs
tests/: common.rs  complex_scenarios.rs  integration.rs  jit.rs  jit_integration.rs
