[package]
name = "jvm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
glob = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false

[profile.bench]
lto = "fat"
codegen-units = 1
