[package]
name = "jvm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
glob = "0.3"
smallvec = "1.13"
cranelift = "0.89"
cranelift-native = "0.89"
cranelift-module = "0.89"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false

[profile.bench]
lto = "fat"
codegen-units = 1
